--- a/_posts/2024-10-11-usage.md
+++ b/_posts/2024-10-11-usage.md
@@ -1,10 +1,12 @@
 ---
 title: Usage
 date: 2024-10-11
-categories: [Hack The Box]
-tags: [HTB Usage]
+category: Hack The Box
+tags:
+  - HTB
+  - Usage
 image:
-    path: /assets/htb/Screenshot 2024-10-17 at 19.53.46.png
+  path: /assets/htb/Screenshot 2024-10-17 at 19.53.46.png
 ---
 
 # Mô tả
