update new post

--- a/_posts/2024-10-18-bizness.md
+++ b/_posts/2024-10-18-bizness.md
@@ -11,21 +11,21 @@ image: '{"path":"/assets/htb/Screenshot 2024-10-18 at 10.37.08"}'
 Vẫn như mục tiêu đặt ra `mỗi tuần một bài HTB` nên hôm nay, trùng hợp là lại vào chiều t6 rãnh rỗi, mình sẽ giải một bài HTB mức easy này.
 Đọc nhẹ qua machine một xí thì có vẻ cũng khá đơn giản.
 
-![[/assets/htb/Screenshot 2024-10-18 at 15.31.13.png]]
+![Screenshot](/assets/htb/Screenshot 2024-10-18 at 15.31.13.png)
 
 # Attack
 ## Recon
 ### *nmap*
-![[/assets/htb/Screenshot 2024-10-18 at 15.22.16.png]]
+![Screenshot](/assets/htb/Screenshot 2024-10-18 at 15.22.16.png)
 
 Khai báo domain `bizness.htb` vào file hosts và truy cập web từ trình duyệt xem có gì húp được hay không.
 
-![[/assets/htb/Screenshot 2024-10-18 at 15.33.39.png]]
+![Screenshot](/assets/htb/Screenshot 2024-10-18 at 15.33.39.png)
 
 Đây có vẻ như là một site quảng bá cho một doanh nghiệp nào đó.
 Xem thử nó đang dùng những công nghệ nào ?
 
-![[/assets/htb/Screenshot 2024-10-18 at 15.34.47.png]]
+![Screenshot](/assets/htb/Screenshot 2024-10-18 at 15.34.47.png)
 
 Nó đang chạy `Java` với dịch vụ web là `Nginx`.
 Chợt nhớ đến phần mô tả về machine ở đầu bài viết này. Nó có nhắc đến CVE-2023-49070. Search và tìm hiểu về CVE này xem có gì vui.
@@ -34,30 +34,30 @@ Nôm na đây là một lỗ hổng unauthentication to RCE trong Apache Ofbiz t
 POC cũng đã có sẵn ở [github](https://github.com/Praison001/Apache-OFBiz-Auth-Bypass-and-RCE-Exploit-CVE-2023-49070-CVE-2023-51467) sau quá trình search google của mình.
 Tuy nhiên, ban đầu mình hớn ha hớn hở clone git về và exploit nhưng không thành công 😥😥😥 (hình dưới nó báo vậy thôi chứ `netcat` của mình vẫn chưa bắt được connect).
 
-![[/assets/htb/Screenshot 2024-10-18 at 16.04.02.png]]
+![Screenshot](/assets/htb/Screenshot 2024-10-18 at 16.04.02.png)
 
 Không hiểu lý do tại sao, nên chui vào file `exploit.py` đọc xem ntn (idea của mình lúc ấy là tính attack manual vì không phải lúc nào POC sẵn cũng chạy được).
 Ờ thì nôm na nó dùng endpoint `/webtools/control/ping;/?USERNAME=&PASSWORD=&requirePasswordChange=Y` để scan xem website có tồn tại lỗ hổng hay không. Sau đó nó sử dụng `ysoserial` để tạo payload rồi parse nội dung ra dạng `xml` và đẩy lên theo đường `xmlrpc`.
 
-![[/assets/htb/Screenshot 2024-10-18 at 16.00.16.png]]
+![Screenshot](/assets/htb/Screenshot 2024-10-18 at 16.00.16.png)
 
 Lý do mình exploit không thành công là vì mình đang sử dụng version java 21.0.1 mà tương ứng với lệnh java trong code thì phải là version Java 8. Đối với các version Java 9 trở đi thì mình phải tự add thêm các module thông qua option. Vì vậy nên mình đã thêm vào các option cho command java trong code:
 ```
 --add-opens java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED --add-opens java.xml/com.sun.org.apache.xalan.internal.xsltc.runtime=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED
 ```
-![[/assets/htb/Screenshot 2024-10-18 at 16.11.18.png]]
+![Screenshot](/assets/htb/Screenshot 2024-10-18 at 16.11.18.png)
 Bây giờ chạy lại và lấy shell thôi.
 
-![[/assets/htb/Screenshot 2024-10-18 at 16.12.24.png]]
+![Screenshot](/assets/htb/Screenshot 2024-10-18 at 16.12.24.png)
 
 Yeah 🤟🏻🤟🏻🤟🏻 ngon lành.
 Flag 1 trong tầm tay.
 
-![[/assets/htb/Screenshot 2024-10-18 at 16.14.10.png]]
+![Screenshot](/assets/htb/Screenshot 2024-10-18 at 16.14.10.png)
 ## Privilege Escalation
 May thay vừa get RCE xong mình đứng ngay path của `ofbiz` luôn.
 
-![[/assets/htb/Screenshot 2024-10-18 at 17.45.37.png]]
+![Screenshot](/assets/htb/Screenshot 2024-10-18 at 17.45.37.png)
 
 Lục lọi khắp path xem có gì hot hay khum nhé.
 Source cũng nhiều thứ qá, mình mới đi được những cái tên cảm thấy khả nghi nhưng chưa thấy gì hot ngoài mấy cái user:pass file `README.adoc` nhưng đó cũng là những account default. Có acc `admin:ofbiz` cũng là acc default và mình thử login theo đường dẫn admin `https://bizness.htb/webtools/control/login` nhưng không thành công. Thôi để chạy về nhà rồi mần tiếp sau .........
