--- a/_posts/2025-01-07-shocker.md
+++ b/_posts/2025-01-07-shocker.md
@@ -1,9 +1,10 @@
 ---
 title: Shocker
 Date: 2025-01-07
-category: Hack The Box
+categories: HackTheBox Easy
 tags:
   - HTB
+  - Easy
   - Shocker
 ---
 # Mô tả
