--- a/_posts/2025-06-02-blocky.md
+++ b/_posts/2025-06-02-blocky.md
@@ -1,17 +1,17 @@
 ---
 title: Blocky
-Date: 2025-06-06
+Date: 2025-02-06
 categories: HackTheBox Easy
 tags:
   - HTB
   - Easy
   - Blocky
+  - OSWE
 ---
 # Mô tả
 Tự nhiên thấy dạo này người người nhà nhà đua nhau lấy OSWE làm mình cũng muốn đú theo :))). Vậy nên sẵn đang có những bài lab HTB nên là mình luyện luôn. Bắt đầu với một bài Easy trước.
 
 ![Screenshot](/assets/htb/Screenshot 2025-06-06 at 11.42.29.png)
-
 # Attack
 ## Recon
 `nmap`.
@@ -38,47 +38,47 @@ Vô tình phát hiện được 2 file .jar. Down về reverse và đọc source
 
 ![Screenshot](/assets/htb/telegram-cloud-photo-size-5-6204198341064116464-x.jpg)
 
-Vừa mở file BlockyCore mà đã có hàng ngon rầu :))))
+Vừa mở file `BlockyCore` mà đã có hàng ngon rầu 🤟🏻
 Login vào phpmyadmin hóng thôi. Vô tình này scan `feroxbuster` cũng thấy site có sử dụng phpmyadmin để làm db thì phải.
 
 ![Screenshot](/assets/htb/Screenshot 2025-06-10 at 15.31.56.png)
 
-Yeah hết sảy con bà bảy. Tìm cách login vào wordpress thôi.
+Yeah hết sảy con bà bảy 👻👻👻. Tìm cách login vào wordpress thôi.
 
 ![Screenshot](/assets/htb/Screenshot 2025-06-10 at 15.33.18.png)
 
 Chỉ có mỗi một user trong bản user (đoán chắc đây ắt hẳn là admin site wordpress luôn gòy), tiếc là password cũng đã mã hoá. Hmmm làm sao để có password plaintext mà login vào WP đây ta.
-À há mình cầm DB mà. Đổi pass nó luôn kkkkk.
+À há mình cầm DB mà. Đổi pass nó luôn 🤡.
 
 ![Screenshot](/assets/htb/Screenshot 2025-06-10 at 15.35.37.png)
 
-Đổi nó thành `123` với mã hoá MD5 cho dễ crack rồi go thôi :D
+Đổi nó thành `123` với mã hoá MD5 cho dễ crack rồi go thôi 🥷
 
 ![Screenshot](/assets/htb/Screenshot 2025-06-10 at 15.38.17.png)
 
-Quá tẹt dời !!!! Login thành công rồi => Như vậy xem như mình đã toàn quyền control được cái web này. Cơ mà mụt đích cuối cùng vẫn cần lên được shell để lấy flag. Hmmm
-Quay lại kết quả scan nmap ban đầu hình như mình còn cái dịch vụ ssh đang open. Mà user login phpmyadmin cũng là root nữa => Liệu có cùng tài khoản k ta ? Tiếc gì mà không thử nhỉ.
+Quá tẹt dời 👏🏻 Login thành công rồi ☞ Như vậy xem như mình đã toàn quyền control được cái web này. Cơ mà mụt đích cuối cùng vẫn cần lên được shell để lấy flag. Hmmm 🤔
+Quay lại kết quả scan nmap ban đầu hình như mình còn cái dịch vụ ssh đang open. Mà user login phpmyadmin cũng là root nữa ➡︎ Liệu có cùng tài khoản k ta ? Tiếc gì mà không thử nhỉ.
 ## SSH
-Sai rồi có vẻ như không trùng tài khoản. Hmmm, à còn username trong DB nữa mà (Notch), cơ mà lại không có pass, hay thử với pass login phpmyadmin luôn nhỉ.
+Sai rồi có vẻ như không trùng tài khoản. Hmmm 🤔, à còn username trong DB nữa mà (Notch), cơ mà lại không có pass, hay thử với pass login phpmyadmin luôn nhỉ.
 
 ![Screenshot](/assets/htb/Screenshot 2025-06-10 at 15.45.54.png)
 
-Ề hế lụm kẹo :)))). Get flag 1 nhanh kẻo lỡ.
-## Flag 1
+Ề hế lụm kẹo 🤭🤭🤭. Get flag 1 nhanh kẻo lỡ.
 
 ![Screenshot](/assets/htb/Screenshot 2025-06-10 at 15.47.42.png)
-
-Flag1: e9ccdbcabaae0e281542073154f337b6
-## Flag 2
+## Privilege Escalation
 Hồi nãy khi SSH thành công mình có để ý cái dòng 
-`To run a command as administrator (user "root"), use "sudo <command>".See "man sudo_root" for details.
+➼ `To run a command as administrator (user "root"), use "sudo <command>".See "man sudo_root" for details.
 Nhìn rất là quen thuộc. Thường thì khi mình ssh vào những user mà quyền user ngang với quyền root sẽ hiện dòng này.
-Ngại gì mà không thử dùng lại đúng pass ssh để lên root xem sao kkkkk.
+Ngại gì mà không thử dùng lại đúng pass ssh để lên root xem sao 🤭🤭🤭.
 
 ![Screenshot](/assets/htb/Screenshot 2025-06-10 at 15.52.32.png)
 
-Êhhhhhhhhh, giỡn mà thiệt vậy luôn hả chời :))). Thôi xem như trò chơi này trời cho rồi. Lấy flag 2 thôi.
+Êhhhhhhhhh, giỡn mà thiệt vậy luôn hả chời 🤣. Thôi xem như trò chơi này trời cho rồi. Lấy flag 2 thôi.
 
 ![Screenshot](/assets/htb/Screenshot 2025-06-10 at 15.53.51.png)
-
-Flag 2: `aa279a76f752c617dca0fa7b238ecb7f`.
+# Kết luận
+## Flag 1
+`e9ccdbcabaae0e281542073154f337b6`
+## Flag 2
+``aa279a76f752c617dca0fa7b238ecb7f``
