edit for a new post

--- a/_posts/2025-06-12-help.md
+++ b/_posts/2025-06-12-help.md
@@ -29,7 +29,8 @@ Tiếp tục với chuỗi luyện tập OSWE mình sẽ đến với bài easy 
 ![Screenshot](/assets/htb/Screenshot 2025-06-13 at 14.43.46.png)
 
 Sau khi fuzz thử thì chỉ có mỗi endpoint `/graphql` báo thiếu tham số query ☞ Khả năng cao port này nó đang dùng graphQL.
-Thử áp dụng mấy payload lụm lặt ở trên mạng xem có hiệu quả hay không. ``
+Thử áp dụng mấy payload lụm lặt ở trên mạng xem có hiệu quả hay không. 
+`query={__schema{types{name,fields{name}}}}`
 
 ![Screenshot](/assets/htb/Screenshot 2025-06-13 at 14.46.27.png)
 
