edit for a new post

--- a/_posts/2025-06-12-help.md
+++ b/_posts/2025-06-12-help.md
@@ -30,14 +30,18 @@ Tiếp tục với chuỗi luyện tập OSWE mình sẽ đến với bài easy 
 
 Sau khi fuzz thử thì chỉ có mỗi endpoint `/graphql` báo thiếu tham số query ☞ Khả năng cao port này nó đang dùng graphQL.
 Thử áp dụng mấy payload lụm lặt ở trên mạng xem có hiệu quả hay không. 
-`query={__schema{types{name,fields{name}}}}`
+```
+query={__schema{types{name,fields{name}}}}
+```
 
 ![Screenshot](/assets/htb/Screenshot 2025-06-13 at 14.46.27.png)
 
 Ngon nhể 😌
 Như kết quả trên mình hiểu nôm na là trong bảng `User` có `username` và `password`. Thử lấy thông tin của `username` và `password` xem sao.
 Cách lấy thì chỉ cần query tới bảng `User` như payload sau: 
-`query={user{username, password}}`
+```
+query={user{username, password}}
+```
 
 ![Screenshot](/assets/htb/Screenshot 2025-06-13 at 15.03.56.png)
 
@@ -138,6 +142,10 @@ Quá đã 😚, lụm flag tiếp theo thôi 😋
 ![Screenshot](/assets/htb/Screenshot 2025-06-18 at 11.05.16.png)
 # Kết luận
 ## Flag 1
-`b99e0422285d215869dbfc4f0707f91d`
+```
+b99e0422285d215869dbfc4f0707f91d
+```
 ## Flag 2
-`4d33db5f8c7e3a5442eee1f5daaf4341`
+```
+4d33db5f8c7e3a5442eee1f5daaf4341
+```
