--- a/_posts/2024-11-07-TTY-SHELL.md
+++ b/_posts/2024-11-07-TTY-SHELL.md
@@ -1,7 +1,11 @@
 ---
 title: Nâng cấp raw shell (non-interactive shell) lên TTY shell (pseudo shell)
 Date: 2024-11-07
-category: Tips - Trick
+category: Guidelines
+tags:
+  - Guidelines
+  - Shell-Beauty
+  - Tricks
 ---
 # Revere shell
 Sau khi get shell thành công mình sẽ sử dụng python để khởi tạo TTY (trong trường hợp server victim không có python thì chịu 😅).
